Fix the overflow in the help about dialog.

--- a/packages/help-extension/style/index.css
+++ b/packages/help-extension/style/index.css
@@ -68,7 +68,6 @@
   justify-content: flex-start;
   align-items: flex-start;
   padding-top: 12px;
-  margin-bottom: -15px;
 }
 
 .jp-About-externalLinks .jp-Button-flat {
@@ -76,8 +75,7 @@
 }
 
 .jp-About-copyright {
-  position: relative;
-  bottom: -44px;
+  padding-top: 25px;
 }
 
 .jp-About-header {
